# gyros

./: .hgignore  CMakeLists.txt  README.md  code_stats.sh
include/gyros/: builder.hpp  make_builder_type.hpp  scene.hpp  state.hpp  type_traits.hpp
include/gyros/component/: iterator.hpp  position_iterator.hpp  rotor.hpp  rotor_builder.hpp  rotor_lock.hpp  rotor_mutex.hpp  rotor_state.hpp
include/gyros/component/detail/: findsubtype.hpp  rotor_builder.hpp  rotor_creator.hpp
include/gyros/detail/: builder.hpp  findsubtype.hpp  make_rotor_type.hpp
include/gyros/entity/: builder.hpp  index.hpp  index_builder.hpp  iterators.hpp
include/gyros/entity/detail/: builder_base.hpp  index_build_state.hpp  iterators.hpp  iterators_creator.hpp
include/gyros/fwd/: builder.hpp  scene.hpp  state.hpp
include/gyros/fwd/component/: iterator.hpp  rotor.hpp  rotor_builder.hpp  rotor_state.hpp
include/gyros/fwd/entity/: index.hpp  iterators.hpp
include/gyros/util/: type_list.hpp  type_literal.hpp
include/gyros/util/type_list/: back.hpp  cast.hpp  cat.hpp  (+12 more)
include/test/: mock_functor.hpp  static_assert.hpp
include/test/gyros/: components.hpp  visitor_wrapper.hpp
test/: CMakeLists.txt  builder_test.cpp  components.cpp  entity_iterators_test.cpp  index_build_state_test.cpp  index_builder_test.cpp  index_test.cpp  make_builder_type_test.cpp  position_iterator_test.cpp  reading_iterator_test.cpp  rotor_lock_test.cpp  rotor_mutex_test.cpp  rotor_state_test.cpp  rotor_test.cpp  scene_builder_test.cpp  scene_test.cpp  tests.cpp  type_list_test.cpp  writing_iterator_test.cpp
(+5 files in other folders)
